# holdtwin

./: .env  README.md  pyproject.toml  requirements.txt
holistic_agent/: __init__.py  action.py  agent.py  config.py  main.py  memory.py  model.py  perception.py  reasoning.py
