[project]
name = "holdtwin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mss>=10.0.0",
    "neo4j>=5.28.1",
    "numpy>=2.3.0",
    "pillow>=11.2.1",
    "pyautogui>=0.9.54",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.0",
    "torch>=2.7.1",
]
